hard-gists/1433794/run.log
=== Docker Run Log for 1433794 ===
Started at: Mi 29. Okt 12:13:36 CET 2025

[2025-10-29 12:13:36] START: Running container for 1433794
[2025-10-29 12:13:36] SUCCESS: Container d4e1d1a5b474b06bc05a7f0ea5786f995d2ca565ddd573ed33f6041ffa4f7535 started for 1433794
=== Container logs for 1433794 ===
  File "/snippet.py", line 30
    print end
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1433794 ===
[2025-10-29 12:13:38] INFO: Container d4e1d1a5b474b06bc05a7f0ea5786f995d2ca565ddd573ed33f6041ffa4f7535 has stopped
